// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Form should \`labelAlign\` work in FormItem 1`] = `
<div
  class="infini-row infini-form-item"
>
  <div
    class="infini-col infini-form-item-label infini-form-item-label-left"
  >
    <label
      class=""
      title="test"
    >
      test
    </label>
  </div>
  <div
    class="infini-col infini-form-item-control-wrapper"
  >
    <div
      class="infini-form-item-control"
    >
      <span
        class="infini-form-item-children"
      />
    </div>
  </div>
</div>
`;

exports[`Form should \`labelAlign\` work in FormItem 2`] = `
<form
  class="infini-form infini-form-horizontal"
>
  <div
    class="infini-row infini-form-item"
  >
    <div
      class="infini-col infini-form-item-label infini-form-item-label-left"
    >
      <label
        class=""
        title="test"
      >
        test
      </label>
    </div>
    <div
      class="infini-col infini-form-item-control-wrapper"
    >
      <div
        class="infini-form-item-control"
      >
        <span
          class="infini-form-item-children"
        />
      </div>
    </div>
  </div>
</form>
`;

exports[`Form should props colon of Form.Item override the props colon of Form. 1`] = `
<form
  class="infini-form infini-form-horizontal"
>
  <div
    class="infini-row infini-form-item"
  >
    <div
      class="infini-col infini-form-item-label"
    >
      <label
        class="infini-form-item-no-colon"
        title="label"
      >
        label
      </label>
    </div>
    <div
      class="infini-col infini-form-item-control-wrapper"
    >
      <div
        class="infini-form-item-control"
      >
        <span
          class="infini-form-item-children"
        >
          input
        </span>
      </div>
    </div>
  </div>
  <div
    class="infini-row infini-form-item"
  >
    <div
      class="infini-col infini-form-item-label"
    >
      <label
        class=""
        title="label"
      >
        label
      </label>
    </div>
    <div
      class="infini-col infini-form-item-control-wrapper"
    >
      <div
        class="infini-form-item-control"
      >
        <span
          class="infini-form-item-children"
        >
          input
        </span>
      </div>
    </div>
  </div>
  <div
    class="infini-row infini-form-item"
  >
    <div
      class="infini-col infini-form-item-label"
    >
      <label
        class="infini-form-item-no-colon"
        title="label"
      >
        label
      </label>
    </div>
    <div
      class="infini-col infini-form-item-control-wrapper"
    >
      <div
        class="infini-form-item-control"
      >
        <span
          class="infini-form-item-children"
        >
          input
        </span>
      </div>
    </div>
  </div>
</form>
`;
